--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,10 @@
 *.dll.config
 *.cache
 *.suo
-# Include dlls if they’re in the NuGet packages directory
-!/packages/*/lib/*.dll
+
+# packages
+
+packages/
 
 # VS Directories
 
