--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,14 +17,26 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup arduino-cli
-        uses: arduino/compile-sketches@v1
-        with:
-            fqbn: "esp32:esp32:esp32"
-            platforms: |
-              - name: esp32:esp32
-                source-url: https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
-            sketch-paths: |
-              - server
+        shell: pwsh
+        run: |
+          if (-not (Test-Path "C:\arduino-cli\arduino-cli.exe")) {
+            Invoke-WebRequest -Uri "https://downloads.arduino.cc/arduino-cli/arduino-cli_latest_Windows_64bit.zip" -OutFile "arduino-cli.zip"
+            Expand-Archive -Path "arduino-cli.zip" -DestinationPath "C:\arduino-cli"
+          }
+        
+      - name: Setup ESP32 core
+        shell: cmd
+        run: |
+          C:\arduino-cli\arduino-cli.exe config init
+          C:\arduino-cli\arduino-cli.exe config set board_manager.additional_urls "https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json"
+          C:\arduino-cli\arduino-cli.exe core update-index
+          C:\arduino-cli\arduino-cli.exe core install esp32:esp32
+        
+      - name: Compile ESP32 project
+        shell: cmd
+        run: |
+          mkdir build
+          C:\arduino-cli\arduino-cli.exe compile --fqbn esp32:esp32:esp32 --output-dir build server/server.ino
       
       - name: Upload binaries
         uses: actions/upload-artifact@v3
