--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Run Unit Tests and Capture Output
           run: |
-            arduino-cli upload -p COM1 --fqbn esp32:esp32:esp32 test_server/test_code.ino > test_results.log 2>&1
+            C:\arduino-cli\arduino-cli.exe upload -p COM1 --fqbn esp32:esp32:esp32 test_server/test_code.ino > test_results.log 2>&1
   
         - name: Process Test Results
           run: |
