--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,10 +38,12 @@ jobs:
           C:\arduino-cli\arduino-cli.exe compile --fqbn esp32:esp32:esp32 test_server/test_server.ino
 
       - name: Run Unit Tests and Capture Output
+        shell: cmd
           run: |
             C:\arduino-cli\arduino-cli.exe upload -p COM1 --fqbn esp32:esp32:esp32 test_server/test_code.ino > test_results.log 2>&1
   
-        - name: Process Test Results
+      - name: Process Test Results
+        shell: cmd
           run: |
             $testResults = Get-Content "test_results.log"
             
