--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,11 @@ jobs:
           C:\arduino-cli\arduino-cli.exe core update-index
           C:\arduino-cli\arduino-cli.exe core install esp32:esp32
         
+      - name: Setup ArduinoUnit library
+        shell: cmd
+        run: |
+          C:\arduino-cli\arduino-cli.exe lib install ArduinoUnit
+
       - name: Compile ESP32 Tests
         shell: cmd
         run: |
