--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Run Unit Tests and Capture Output
         shell: cmd
         run: |
-          C:\arduino-cli\arduino-cli.exe upload -p COM1 --fqbn esp32:esp32:esp32 test_server/test_code.ino > test_results.log 2>&1
+          C:\arduino-cli\arduino-cli.exe upload --simulate --fqbn esp32:esp32:esp32 test_server/test_code.ino > test_results.log 2>&1
   
       - name: Process Test Results
         shell: cmd
